--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,6 @@
           <i class="bi bi-heart"></i>
           <span id="favoritos-count" class="badge bg-danger">0</span>
         </a>
-        </form>
       </div>
     </div>
   </nav>
@@ -74,14 +73,13 @@
   <!-- Ofertas + Consejos -->
   <div class="container py-5">
     <div class="row g-4 align-items-stretch">
-
       <div class="col-lg-4 d-flex flex-column">
         <h2 class="text-center mb-4">🌱 Consejos del Día</h2>
         <div class="card text-white shadow-sm ">
           <div class="img-cuadrada">
             <img src="img/Fondo.jpg" class="card-img" alt="Consejo saludable" />
             <div class="card-img-overlay d-flex flex-column justify-content-center text-center"
-              style="background: rgba(0,0,0,0.4);  border-radius: 2px;">
+              style="background: rgba(0,0,0,0.4); border-radius: 2px;">
               <h5 id="consejo-titulo" class="card-title fw-bold">Come 5 frutas y verduras al día</h5>
               <p id="consejo-texto" class="card-text">Te aportan vitaminas, minerales y fibra para una vida más
                 saludable.</p>
@@ -89,7 +87,8 @@
           </div>
         </div>
       </div>
-      <!-- Columna  Ofertas -->
+
+      <!-- Columna Ofertas -->
       <div class="col-lg-8">
         <h2 class="text-center mb-4">🔥 Ofertas de la Semana</h2>
         <div id="ofertas-semana" class="row g-4"></div>
@@ -113,9 +112,10 @@
       }
     });
   </script>
-  </div>
-  <script src="js/Productos.js"></script>
-  <script src="js/Main.js"></script>
+
+  <!-- Scripts -->
+<script src="js/Productos.js"></script>
+<script src="js/Main.js"></script>
 
 </body>
 
