--- a/Admin.html
+++ b/Admin.html
@@ -59,21 +59,13 @@
             <th>Producto</th>
             <th>Precio</th>
             <th>Descripción</th>
+            <th>Compañía</th>
             <th>Estado</th>
             <th>Acciones</th>
           </tr>
         </thead>
         <tbody id="admin-productos"></tbody>
       </table>
-
-      <!-- Despacho -->
-      <h4 class="mt-4">Asociación con compañías de reparto</h4>
-      <select class="form-select w-50">
-        <option>Chilexpress</option>
-        <option>Starken</option>
-        <option>Bluexpress</option>
-        <option>Correos de Chile</option>
-      </select>
 
       <!-- Consejo del día -->
       <h4 class="mt-4">Consejo del día</h4>
@@ -137,6 +129,15 @@
             <label>Descripción</label>
             <textarea id="editar-descripcion" class="form-control" rows="3"></textarea>
           </div>
+          <div class="mb-3">
+            <label>Compañía de reparto</label>
+            <select id="editar-compania" class="form-select">
+              <option>Chilexpress</option>
+              <option>Starken</option>
+              <option>Bluexpress</option>
+              <option>Correos de Chile</option>
+            </select>
+          </div>
         </div>
         <div class="modal-footer">
           <button class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
@@ -166,6 +167,15 @@
           <div class="mb-3">
             <label>Descripción</label>
             <textarea id="agregar-descripcion" class="form-control" rows="3"></textarea>
+          </div>
+          <div class="mb-3">
+            <label>Compañía de reparto</label>
+            <select id="agregar-compania" class="form-select">
+              <option>Chilexpress</option>
+              <option>Starken</option>
+              <option>Bluexpress</option>
+              <option>Correos de Chile</option>
+            </select>
           </div>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" id="agregar-habilitado" checked>
@@ -197,8 +207,8 @@
       }
     }
   </script>
-<script src="js/admin.js"></script>
-<script src="js/Main.js"></script>
+  <script src="js/Productos.js"></script>
+  <script src="js/Main.js"></script>
 
 </body>
 
